[package]
name = "brrr"
version = "0.1.0"
authors = ["zack466"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.34"
lazy_static = "1.4.0"
regex = "1"
crossterm = "0.18"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }

[[bin]]
name = "console"
